# gurps_battle_sim

./: CMakeLists.txt  README.md  character.cpp  characterattribute.cpp  main.cpp  primaryattribute.cpp
include/: attributetypes.h  character.h  characterattribute.h  primaryattribute.h
lib/: CMakeLists.txt  character.cpp  characterattribute.cpp  primaryattribute.cpp  secondaryattribute.cpp
lib/include/: character.h  characterattribute.h  primaryattribute.h  secondaryattribute.h
lib/test/: CMakeLists.txt  test_primaryattribute.cpp  test_secondaryattribute.cpp
